--- a/user/templates/user/base.html
+++ b/user/templates/user/base.html
@@ -8,14 +8,14 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
         <script src="//unpkg.com/alpinejs" defer></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<script src="https://cdn.jsdelivr.net/npm/unpoly@3.10.2/unpoly.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.10.2/unpoly.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 		<script src="https://unpkg.com/htmx.org@2.0.4"></script>
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-[#F2F4F3]" style="font-family: 'Nunito', sans-serif; font-weight:400; font-style:normal;">
+	<body class="bg-[#F2F4F3] min-h-screen" style="font-family: 'Nunito', sans-serif; font-weight:400; font-style:normal;">
         {% include "./components/navbar.html" %}
 		{% include "./components/toast.html" %}
 		{% block content %}
