added footer from log in and sign up page

--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -26,8 +26,13 @@
 
             <button id="submit-btn" type="submit" class="btn bg-[#0A0908] w-full  text-[#F2F4F3]">Log In</button>
         </form>
+
+        <p>Don't have an account? <a href="{% url 'register' %}" class="text-[#5E503F] underline">Register</a></p>
     </div>
+    
 </div>
+
+{% include 'user/components/footer.html' %}
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
