--- a/user/templates/user/components/toast.html
+++ b/user/templates/user/components/toast.html
@@ -1,9 +1,9 @@
-<div class="fixed top-5 right-5 z-50 space-y-4">
+<div class="fixed top-18 right-5 z-50 space-y-4">
     {% for message in messages %}
         <div x-data="{ show: true }" x-show="show" x-init="setTimeout(() => show = false, 4000)" 
              class="alert 
                 {% if message.tags == 'success' %} alert-success bg-green-400 text-white {% endif %}
-                {% if message.tags == 'error' %} alert-error bg-black/80 text-white {% endif %}
+                {% if message.tags == 'error' %} alert-error bg-red-400 text-white {% endif %}
                 {% if message.tags == 'info' %} alert-info bg-blue-400 text-white {% endif %}
              shadow-lg p-2 rounded-lg w-auto max-w-sm">
             <div class="flex items-center justify-between space-x-2 text-center">
