--- a/seller/templates/seller/components/navbar.html
+++ b/seller/templates/seller/components/navbar.html
@@ -1,7 +1,15 @@
 {% load static %}
+
+{% if user.is_authenticated %}
 <nav  class="lg:px-10 flex bg-[#0A0908] justify-between py-4 items-center border-b border-gray-400 px-2">
     <div class="text-2xl text-[#F2F4F3] flex font-semibold">
         <strong style="font-family: 'Abril Fatface', serif; font-weight:400; font-style:normal;">P</strong>assioné
     </div>
 
+    <div>
+        <a class="text-[#F2F4F3] tooltip tooltip-bottom" data-tip="Logout" href="{% url 'logout' %}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out-icon lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
+        </a>
+    </div>
 </nav>
+{% endif %}
