--- a/seller/templates/seller/dashboard.html
+++ b/seller/templates/seller/dashboard.html
@@ -1,1 +1,6 @@
 {% extends 'seller/base.html' %}
+{% block title %}Passioné | Seller Dashboard{% endblock %}
+
+{% block content %}
+{% include 'seller/components/dashview.html' %}
+{% endblock  %}
