--- a/seller/templates/seller/components/dashview.html
+++ b/seller/templates/seller/components/dashview.html
@@ -1,3 +1,35 @@
+{% load static %}
+<style>
+    @-webkit-keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.scale-in-center {
+	-webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+</style>
 <div class="outline mx-2 lg:mx-10 mt-3 bg-[#0A0908] text-[#F2F4F3] rounded-lg px-4 py-5">
     <!-- Header Section -->
     <div class="flex flex-col md:flex-row md:items-center md:justify-between space-y-4 md:space-y-0">
@@ -11,9 +43,9 @@
     </div>
 
     <!-- Stats Cards Section -->
-    <div class="flex flex-col sm:flex-row flex-wrap gap-4 mt-8">
+    <div class="flex flex-col sm:flex-row flex-wrap gap-4 mt-8 ">
         <!-- Total Products -->
-        <div class="flex-1 min-w-[260px] px-4 py-4 rounded-lg space-y-3 bg-[#22333B]">
+        <div class="flex-1 min-w-[260px] px-4 py-4 rounded-lg space-y-3 bg-[#22333B] scale-in-center">
             <div class="flex justify-between">
                 <p class="text-xl">Products</p>
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -27,7 +59,7 @@
         </div>
 
         <!-- Total Orders -->
-        <div class="flex-1 min-w-[260px] px-4 py-4 rounded-lg space-y-3 bg-[#22333B]">
+        <div class="flex-1 min-w-[260px] px-4 py-4 rounded-lg space-y-3 bg-[#22333B] scale-in-center">
             <div class="flex justify-between">
                 <p class="text-xl">Orders</p>
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -40,7 +72,7 @@
         </div>
 
         <!-- Total Earnings -->
-        <div class="flex-1 min-w-[260px] px-4 py-4 rounded-lg space-y-3 bg-[#22333B]">
+        <div class="flex-1 min-w-[260px] px-4 py-4 rounded-lg space-y-3 bg-[#22333B] scale-in-center">
             <div class="flex justify-between">
                 <p class="text-xl">Total Earnings</p>
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
