added product list view

--- a/seller/templates/seller/components/dashview.html
+++ b/seller/templates/seller/components/dashview.html
@@ -36,10 +36,10 @@
         <!-- Profile Name -->
         <div class="flex flex-col space-y-2">
             <p class="text-3xl md:text-4xl underline" style="font-family: 'Abril Fatface', serif;">{{ user.username }}</p>
-            <p class="text-[#5E503F] text-sm md:text-base">Member since {{ user.created_at|date:"F Y" }}</p>
+            <p class="text-[#A9927D] text-sm md:text-base">Member since {{ user.created_at|date:"F Y" }}</p>
         </div>
 
-        <a class="btn bg-[#A9927D] text-[#F2F4F3] border-none self-start md:self-auto" href="">View Public Store</a>
+        <a class="btn bg-[#5E503F] text-[#F2F4F3] border-none self-start md:self-auto" href="">View Public Store</a>
     </div>
 
     <!-- Stats Cards Section -->
