--- a/seller/templates/seller/partials/products.html
+++ b/seller/templates/seller/partials/products.html
@@ -1,3 +1,34 @@
-<div class="mx-2 lg:mx-10">
-    Hello from products
+<div class="mx-2 lg:mx-10 bg-[#0A0908] text-[#F2F4F3] mt-5 rounded-lg px-4 py-5">
+    <div>
+        <p class="text-xl font-bold">Products</p>
+        <p class="text-[#A9927D]">Manage your store's products</p>
+    </div>
+
+    <!--ADD PRODUCT MODAL-->
+    <div class="flex justify-between items-center ">
+        <p>Search Products</p>
+        <div>
+            <!-- Open the modal using ID.showModal() method -->
+            <button class="btn btn-ghost text-[#F2F4F3] hover:text-black  bg-[#5E503F] border-none" onclick="addModal.showModal()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-grid2x2-plus-icon lucide-grid-2x2-plus"><path d="M12 3v17a1 1 0 0 1-1 1H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v6a1 1 0 0 1-1 1H3"/><path d="M16 19h6"/><path d="M19 22v-6"/></svg>Add Product</button>
+            <dialog id="addModal" class="modal modal-bottom sm:modal-middle">
+
+            <div class="modal-box">
+                <h3 class="text-lg text-black font-bold">Add New Product</h3>
+                <p class="py-4 text-black">Fill out the form to create new product</p>
+                <div class="modal-action">
+                <form method="dialog">
+                    
+                    <a class="btn bg-[#0A0908] text-[#F2F4F3]" href="{% url 'logout' %}">Logout</a>
+                    <button class="btn">Cancel</button>
+                </form>
+                </div>
+            </div>
+            </dialog>
+        
+        </div>
+    </div>
+
+    <div>
+        
+    </div>
 </div>
