fixed cancel button

--- a/seller/templates/seller/add_product.html
+++ b/seller/templates/seller/add_product.html
@@ -42,7 +42,7 @@
 
         <div class="modal-action">
             <button type="submit" class="btn bg-[#5E503F] text-[#F2F4F3]">Save</button>
-            <button type="button" class="btn" onclick="addModal.close()">Cancel</button>
+            <a class="btn" href="{% url 'seller:seller_dashboard' %}">Cancel</a>
         </div>
     </form>
 
