added analytic bar chart and donut chart

--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.10.2/unpoly.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 		<script src="https://unpkg.com/htmx.org@2.0.4"></script>
+		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 		{% tailwind_css %}
 	</head>
 
